<resources>
    <string name="app_name">Cool Quotes</string>
    <string-array name="categories">

        <item>Books</item>
        <item>Business</item>
        <item>Dreams</item>
        <item>Funny</item>
        <item>Humour</item>
        <item>Humanity</item>
        <item>Inspiration</item>
        <item>Success</item>
        <item>Teamwork</item>
        <item>Love</item>

    </string-array>
    <string-array name="authors">
        <item>Albert Einstein</item>
        <item>Abraham Lincoln</item>
        <item>Benjamin Franklin</item>
        <item>Bill Gates</item>
        <item>Bill Cosby</item>
        <item>Confucius</item>
        <item>Charles Darwin</item>
        <item>Charles Dickens</item>
        <item>Charlie Chaplin</item>
        <item>Ernest Hemingway</item>
        <item>Ernesto Guevara</item>
        <item>George Bernard Shaw</item>
        <item>Henry Ford</item>
        <item>Julian Assange</item>
        <item>Karl Marx </item>
        <item>Mahatma Gandhi</item>
        <item>Mother Teresa</item>
        <item>Mark Twain</item>
        <item>Oscar Wilde</item>
        <item>Socrates</item>
        <item>Steven Jobs</item>
        <item>William Shakespeare</item>
        <item>Warren Buffett</item>

    </string-array>
    <string name="favourites">Favourites</string>
    <string name="test_text">Our prayers should be for blessings in general, for God knows best what is good for us. Happiness is unrepentant pleasure. Socrates</string>
    <string name="share">Share with ?</string>
    <string name="categoryKey">categoryKey</string>
    <string name="bundleKey">bundleKey</string>
    <string name="jump_to">Jump to</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="end">Oops,thus all</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="zeluga_brown">Zeluga brown</string>
    <string name="notifications">Notifications</string>
    <string name="_9_am">9 AM</string>
    <string name="_9_pm">9 PM</string>
    <string name="crystal_blue">Crystal blue</string>
    <string name="empty">Oops you have no favourites yet.</string>
    <string name="added">Added to favourites</string>
    <string name="not_added">Oops,please try again.</string>
    <string name="deleted">Deleted</string>
    <string name="try_again">Oops try again</string>
    <string name="good_evening">Good evening.</string>
    <string name="good_morning">Good morning.</string>
    <string name="day_quote">Quote of the day</string>
    <string name="authorsKey">AuthorsKey</string>
    <string name="go_to_number">Go to number?</string>
    <string name="off">Off</string>
    <string-array name="quotesOptions">

        <item>Share</item>
        <item>Add to favourites</item>

    </string-array>
    <string-array name="shareOrDelete">

        <item>Share</item>
        <item>Delete</item>


    </string-array>
    <string-array name="Books">
        <item>Only the very weak-minded refuse to be influenced by literature and poetry. ― Cassandra Clare</item>
        <item>Books are like mirrors: if a fool looks in, you cannot expect a genius to look out. ― J.K Rowling </item>
        <item>We are of opinion that instead of letting books grow moldy behind an iron grating, far from the vulgar gaze, it is better to let them wear out by being read. ― Jules Verne</item>
        <item>A book must be the axe for the frozen sea within us. ― Franz Kafka</item>
        <item>Without words, without writing and without books there would be no history, there could be no concept of humanity. ― Hermann Hesse</item>
        <item>A classic is a book that has never finished saying what it has to say. ― Italo Calvino </item>
        <item>Why can\'t people just sit and read books and be nice to each other? ― David Baldacci </item>
        <item>Never lend books, for no one ever returns them; the only books I have in my library are books that other folks have lent me. ― Anatole France</item>
        <item>Anyone who says they have only one life to live must not know how to read a book. ― Anon</item>
        <item>A house without books is like a room without windows. ― Horace Mann</item>
        <item>Books are the compass and telescopes and sextants and charts which other men have prepared to help us navigate the dangerous seas of human life. ― Jesse Lee Bennett </item>
        <item>Whenever you read a good book, somewhere in the world a door opens to allow in more light. ― Vera Nazarian</item>
        <item>A room without books is like a body without a soul. ― Marcus Tullius Cicero</item>
        <item>The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid. ― Jane Austen</item>
        <item> Good friends, good books, and a sleepy conscience: this is the ideal life.― Mark Twain I have always imagined that Paradise will be a kind of library. ― Jorge Luis Borges</item>
        <item> I find television very educating. Every time somebody turns on the set, I go into the other room and read a book. ― Groucho Marx</item>
        <item>Never trust anyone who has not brought a book with them. ― Lemony Snicket Classic</item>
        <item>The books that the world calls immoral are books that show the world its own shame. ― Oscar Wilde</item>
        <item>Books are the ultimate Dumpers: put them down and they’ll wait for you forever; pay attention to them and they always love you back. ― John Green</item>
        <item>There are worse crimes than burning books. One of them is not reading them. ― Joseph Brodsky</item>
        <item>So, please, oh please, we beg, we pray, go throw your TV set away, and in its place you can install, a lovely bookcase on the wall. ― Roald Dahl</item>
        <item>Think before you speak. Read before you think. ― Fran Lebowitz</item>
        <item>Never judge a book by its movie. ― J.W. Eagan</item>
        <item>If you have a garden and a library, you have everything you need. ― Marcus Tullius </item>
        <item>Autobiography is probably the most respectable form of lying. ― Humphrey Carpenter</item>
        <item>Books are the mirrors of the soul. ― Virginia Woolf</item>
        <item>Reading well is one of the great pleasures that solitude can afford you. ― Harold Bloom </item>
        <item>If you go home with somebody, and they don\'t have books, don\'t fuck \'em! ― John Waters</item>
    </string-array>
    <string-array name="Business">
        <item>A man without a smiling face must not open a shop. ― Chinese Proverb</item>
        <item>Customers don\’t expect you to be perfect. They do expect you to fix things when they go wrong. ― Donald Porter</item>
        <item> Every great business is built on friendship. ― J.C. Penney</item>
        <item>The man who will use his skill and constructive imagination to see how much he
        can give for a dollar, instead of how little he can give for a dollar, is bound to succeed.― Henry Ford</item>
        <item>The secret to success in business, and in life, is to serve others. Put others first in all you do. ― Kevin Stirtz</item>
        <item>We are what we repeatedly do. Excellence then, is not a single act, but a habit.  Aristotle</item>
        <item>In business, three things are necessary: knowledge, temper, and time. ― Owen Fellt</item>
        <item>And while the law of competition may be sometimes hard for the individual, it is best for the race, because it ensures the survival of the fittest in every department. ― Andrew Carnegie</item>
        <item>An economist is an expert who will know tomorrow why the things he predicted yesterday didn\'t happen today. ― Laurence J. Peter</item>
        <item>The golden rule for every business man is this: “Put yourself in your customer’s place.  Orison Swett Marden </item>
        <item>Business opportunities are like buses, there\’s always another one coming. ― Richard Branson</item>
        <item>A man should never neglect his family for business. ― Walt Disney</item>
        <item>The competitor to be feared is one who never bothers about you at all, but goes on making his own business better all the time. ― Henry Ford</item>
        <item>A business has to be involving, it has to be fun, and it has to exercise your creative instincts. ― Richard Branson</item>
        <item>To be successful, you have to have your heart in your business, and your business in your heart. ― Thomas Watson, Sr.</item>
        <item>If you work just for money, you’ll never make it, but if you love what you’re doing and you always put the customer first, success will be yours. ― Ray Kroc</item>
        <item>Out there in some garage is an entrepreneur who\’s forging a bullet with your company\’s name on it. ― Gary Hamel</item>
        <item>I am a man of fixed and unbending principles, the first of which is to be flexible at all times. ― Senator Everett Dirksen</item>
        <item>￼Confidence is contagious; so is lack of confidence. ― Vince Lombard</item>
        <item>Business people are like sharks, not just because we\'re gray and slightly oily, or because our teeth trail the innards of those we have eviscerated, but because we must move forward or die. ― Stanley Bing</item>
        <item>Drive your business. Let not your business drive you. ― Benjamin Franklin</item>
        <item>The secret of business is to know something that nobody else knows. ― Aristotle</item>
        <item>No enterprise is more likely to succeed than one concealed from the enemy until it is ripe for execution. ― Niccolo Machiavelli</item>

    </string-array>
</resources>